# gabber1

./: AUTHORS  COPYING.exception  ChangeLog  GABBER2  HACKING  INSTALL  Makefile.am  NEWS  README  README.FreeBSD  README.cvs  README.md  README.proxy  RELEASE  TODO  acconfig.h  autogen.sh  configure.in  gabber.1  gabber.desktop.in  gabber.soundlist.in  gabber.spec.in  license-header.txt  mkinstalldirs
doc/C/: .cvsignore  Makefile.am  gabber-C.omf  gabber.xml
doc/C/chapters/: agents.xml  file.xml  first.xml  intro.xml  login.xml  main.xml  msg.xml  panel.xml  pref.xml  userinfo.xml  users.xml
intl/: .cvsignore
jabberoo/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  acconfig.h  aclocal.m4  autogen.sh  config.h.in  configure.in  doxygen.cfg  mkinstalldirs
jabberoo/include/: Makefile.am  jabberoo.hh  jabberoox.hh  jutil.hh
jabberoo/libjudo/src/: .cvsignore  Element.cpp  ElementStream.cpp  Makefile.am  judo.cpp  judo.hpp
jabberoo/libjudo/src/expat/: Makefile.am  xmlrole.c
jabberoo/libjudo/src/test/: CDATATest.cpp  ElementStreamTest.cpp  ElementTest.cpp  GlobalsTest.cpp  Makefile.am  judo_test.cpp  judo_test.hpp
jabberoo/macros/: Makefile.am
jabberoo/src/: Makefile.am  jabberoo-message.cc  jabberoo-packet.cc  jabberoo-presence.cc  jabberoo-presencedb.cc  jabberoo-roster.cc  jabberoo-session.cc  jabberoo.cc  jabberoox-agent.cc  jabberoox-filter.cc  jutil.cc  sha.c
jabberoo/test/: .cvsignore  Makefile.am
macros/: autogen.sh
omf-install/: .cvsignore  Makefile.am
pixmaps/: Makefile.am  bulb-on.xpm  connected-ssl.xpm  connected.xpm  disconnected.xpm  footbulb.xcf  glade-file.xpm  glade-receive-file.xpm  glade-remove-group-menu.xpm  glade-send-file-menu.xpm  glade-send-file.xpm  gnome-gabber.xpm  invisible.xpm  xmms.xpm  xmms_paused.xpm  xmms_stopped.xpm
po/: .cvsignore  POTFILES.in  fr.po  sv.po
sounds/: Makefile.am
src/: .cvsignore  AddContactDruid.cc  AddContactDruid.hh  AddToGroupDlg.cc  AddToGroupDlg.hh  AgentInterface.cc  AgentInterface.hh  AutoAway.cc  AutoAway.hh  BaseGabberWindow.cc  BaseGabberWindow.hh  ChatView.cc  ChatView.hh  ConfigManager.cc  ConfigManager.hh  ContactInfoInterface.cc  ContactInfoInterface.hh  ContactInterface.cc  ContactInterface.hh  DebugInterface.cc  DebugInterface.hh  ErrorManager.cc  ErrorManager.hh  EventManager.cc  EventManager.hh  FTInterface.cc  FTInterface.hh  FilterInterface.cc  FilterInterface.hh  GCInterface.cc  GCInterface.hh  GPGInterface.cc  GPGInterface.hh  GabberApp.cc  GabberApp.hh  GabberConfig.hh  GabberGPG.cc  GabberGPG.hh  GabberLogger.cc  GabberLogger.hh  (+38 more)
ui/: AUDruid_win.glade  AgentBrowser_dlg.glade  Autoupdate_dlg.glade  ContactInfo_dlg.glade  ContactRecv_dlg.glade  ContactSend_dlg.glade  EditGroups_dlg.glade  FTRecv_dlg.glade  FTSend_dlg.glade  FTTransfer_dlg.glade  FilterList_dlg.glade  Filter_dlg.glade  GCIRecv_dlg.glade  GCI_dlg.glade  GCJoin_dlg.glade  GC_win.glade  GPGInfo_dlg.glade  GPGPass_dlg.glade  Gabber_win.glade  IgnoreAdd_dlg.glade  Ignore_dlg.glade  Login_dlg.glade  Makefile.am  MessageRecv_win.glade  MessageSend_win.glade  MyContactInfo_win.glade  OOOChat_win.glade  Prefs_win.glade  RawXML_dlg.glade  RegDruid_win.glade  Status_dlg.glade  SubscriptionRequest_dlg.glade  TransInfo_dlg.glade  URLRecv_dlg.glade  Welcome_win.glade  gabber-logs.css
