AC_INIT(include/jabberoo.hh)

AM_CONFIG_HEADER(config.h)

JABBEROO_AGE=1
JABBEROO_REVISION=1
JABBEROO_CURRENT=2
AC_SUBST(JABBEROO_AGE)
AC_SUBST(JABBEROO_REVISION)
AC_SUBST(JABBEROO_CURRENT)
VERSION=$JABBEROO_AGE.$JABBEROO_REVISION.$JABBEROO_CURRENT

AM_INIT_AUTOMAKE(jabberoo, $VERSION)

AC_LANG_CPLUSPLUS

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AM_PROG_LIBTOOL

dnl Checks for libraries.
AC_CHECK_LIB(stdc++)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_CHECK_FUNCS(timegm,[AC_DEFINE(HAVE_TIMEGM)])

dnl CFLAGS for release and devel versions
CFLAGS=""
CXXFLAGS=""
AC_ARG_ENABLE(debug,
        [  --enable-debug          compile with debugging (for development)],
        debug=$enable_debug
)
AC_MSG_CHECKING(for debugging)
if test "x$debug" = xyes; then
        AC_MSG_RESULT(yes)
        BUILD_TYPE="$BUILD_TYPE Debug"
        CFLAGS="$CFLAGS -g"
	CXXFLAGS="$CXXFLAGS -g"
else
	CFLAGS="$CFLAGS -O2"
	CXXFLAGS="$CXXFLAGS -O2"
        AC_MSG_RESULT(no)
fi

                                               

dnl Check for endianess
AC_C_BIGENDIAN 

dnl ***************************
dnl Process libsigcpp if needed

AM_PATH_SIGC(1.0.0, sigc=yes, sigc=no) 

AM_CONDITIONAL(SIGC_INSTALLED, test x$sigc = xyes)
AM_CONDITIONAL(DEBUG, test x$debug = xyes)
test=no
AM_CONDITIONAL(TEST, test x$test = xyes)
if test x$sigc = xno; then
	AC_CONFIG_SUBDIRS(libsigc++)
else
	AC_DEFINE(SIGC_INSTALLED)
	dnl Ensure sigc-config is available...
	AC_PATH_PROG(SIGC_CONFIG, sigc-config, no)
	SIGC_CFLAGS=`$SIGC_CONFIG --cflags`
	SIGC_LIBS=`$SIGC_CONFIG --libs`
fi
AC_SUBST(SIGC_CFLAGS)
AC_SUBST(SIGC_LIBS)

dnl ***************************

dnl **************************************************
dnl * Static Gabber Build
dnl **************************************************
AC_ARG_ENABLE(static-gabber,
	      [  --enable-static-gabber   compile gabber with libraries statically linked ],
	      [ case "$enableval" in
                yes) static_gabber=yes ;;
                no) static_gabber=no ;;
		esac
	      ],
	      static_gabber=no)

if test "x$static_gabber" = "xyes" ; then
	dnl Is there a better way to find the path of the library .la files?  This code is ugly
	SIGC_PREFIX=`$ac_cv_path_SIGC_CONFIG --prefix`
	if ! test -f $SIGC_PREFIX/lib/libsigc.a ; then
		AC_MSG_ERROR([Could not find sigc++ static libraries.  Please ensure that they are installed.])
	fi
	SIGC_LIBS="$SIGC_PREFIX/lib/libsigc.a $SIGC_PREFIX/lib/libpthread.a"
	SIGC_A_LIBS=$SIGC_LIBS
	AC_SUBST(SIGC_LIBS)
	AC_SUBST(SIGC_A_LIBS)
	JABBEROO_STATIC="-Wl,-Bstatic -lstdc++ -Wl,-Bdynamic"
	AC_SUBST(JABBEROO_STATIC)
fi


AC_OUTPUT([
Makefile
macros/Makefile
libjudo/Makefile
libjudo/src/Makefile
libjudo/src/expat/Makefile
libjudo/src/test/Makefile
include/Makefile
src/Makefile
test/Makefile
])
