EXTRA_DIST=			\
	gabber_message_queue.wav \
	gabber_message_recv.wav \
	gabber_ooochat_queue.wav \
	gabber_ooochat_recv.wav	\
	gabber_online.wav	\
	gabber_offline.wav	\
	gabber_encrypted.wav	\
	gabber_subrequest.wav	\
	gabber_startup.wav	\
	gabber_connected.wav	

sounddir= $(datadir)/sounds/gabber
sound_DATA = $(EXTRA_DIST)