
css_files = gabber-logs.css

glade_files = 	AUDruid_win.glade	\
	AgentBrowser_dlg.glade 	\
	Autoupdate_dlg.glade	\
	ContactInfo_dlg.glade	\
	ContactRecv_dlg.glade	\
	ContactSend_dlg.glade	\
	EditGroups_dlg.glade	\
	FilterList_dlg.glade	\
	Filter_dlg.glade	\
	FTRecv_dlg.glade    \
	FTSend_dlg.glade \
	FTTransfer_dlg.glade \
	GCIRecv_dlg.glade	\
	GCI_dlg.glade		\
	GCJoin_dlg.glade	\
	GC_win.glade		\
	GPGInfo_dlg.glade	\
	GPGPass_dlg.glade	\
	Gabber_win.glade	\
	Ignore_dlg.glade	\
	IgnoreAdd_dlg.glade	\
	Login_dlg.glade		\
	MessageRecv_win.glade	\
	MessageSend_win.glade	\
	MyContactInfo_win.glade \
	OOOChat_win.glade	\
	Prefs_win.glade		\
	RawXML_dlg.glade	\
	RegDruid_win.glade	\
	Status_dlg.glade	\
	SubscriptionRequest_dlg.glade \
	TransInfo_dlg.glade	\
	URLRecv_dlg.glade \
	Welcome_win.glade

pkgdata_DATA = $(css_files) 	\
	$(glade_files)

EXTRA_DIST = $(css_files)	\
	$(glade_files)
